# 26_wuren_yangzhiqin

./: test.sh  第三次作业readme.md  第二次作业readme.md
CMake_test/: CMakeLists.txt  main.cpp
CMake_test/common/: CMakeLists.txt
CMake_test/common/kalman/: CMakeLists.txt
CMake_test/common/kalman/include/: KalmanFilterX.hpp
CMake_test/common/math/: CMakeLists.txt
CMake_test/common/math/include/: Math.h
CMake_test/common/math/src/: Math.cpp
CMake_test/modules/: CMakeLists.txt
CMake_test/modules/A1/: CMakeLists.txt
CMake_test/modules/A1/include/: A1.h
CMake_test/modules/A1/src/: A11.cpp  A12.cpp
CMake_test/modules/A2/: CMakeLists.txt
CMake_test/modules/A2/include/: A2.h
CMake_test/modules/A2/src/: A2.cpp
CMake_test/modules/M1/include/: M1.h
CMake_test/modules/M1/src/: M1.cpp
CMake_test/modules/M2/include/: M2.h
CMake_test/modules/M2/src/: M2.cpp
CMake作业/CMake_test/: CMakeLists.txt
CMake作业/CMake_test/modules/A1/src/: A13.cpp
CMake作业/CMake_test/modules/M1/: CMakeLists.txt
CMake作业/CMake_test/modules/M2/: CMakeLists.txt
CNN作业/: net.py  test.py  train.py  论文.md
Control/作业1/: bicycle_models_problem.m  lane_follower.asv  lane_follower.m
Control/作业2/: 1.cpp  3.cpp  3.py
fsd_ws/fsd_ws/: .gitignore  README.md  run.sh  本人负责控制.md
fsd_ws/fsd_ws/fsd_bringup/: CMakeLists.txt  package.xml
fsd_ws/fsd_ws/fsd_bringup/launch/: f1_right_angle.launch.py
fsd_ws/fsd_ws/fsd_bringup/models/simple_car/: model.config  model.sdf
fsd_ws/fsd_ws/fsd_bringup/urdf/: simple_car.urdf.xacro
fsd_ws/fsd_ws/fsd_common_msgs/: CMakeLists.txt  package.xml
fsd_ws/fsd_ws/fsd_common_msgs/msg/: Cone.idl  Cone.msg  ConeDetections.idl  ConeDetections.msg  Map.idl  Map.msg
fsd_ws/fsd_ws/right_angle_stack/: package.xml  setup.cfg  setup.py
fsd_ws/fsd_ws/right_angle_stack/config/: right_angle_stack.yaml
fsd_ws/fsd_ws/right_angle_stack/resource/: right_angle_stack
fsd_ws/fsd_ws/right_angle_stack/right_angle_stack/: cone_mapper.py  localization_fusion.py  pure_pursuit_controller.py  right_angle_planner.py  track_model.py  track_perception.py  utils.py
fsd_ws/fsd_ws/right_angle_stack/rviz/: right_angle.rviz
fsd_ws/fsd_ws/sim_perception/: package.xml  setup.cfg  setup.py
fsd_ws/fsd_ws/sim_perception/sim_perception/: sim_node.py
fsd_ws/fsd_ws/sim_perception/sim_perception/pyarmor_runtime_000000/: __init__.py
fsd_ws/fsd_ws/tracks/: CMakeLists.txt  package.xml
fsd_ws/fsd_ws/tracks/models/blue_cone/: model.sdf
fsd_ws/fsd_ws/tracks/models/shixi/: model.config  model.sdf
fsd_ws/fsd_ws/tracks/models/yellow_cone/: model.sdf
fsd_ws/fsd_ws/tracks/worlds/: right_angle_harmonic.sdf
homework/作业1/: Astar算法解析.cpp  作业1要求.txt
homework/作业2/: 线性回归(加入正则化惩罚).ipynb  线性回归.ipynb
homework/作业3/: 调用SVM库.ipynb
homework/作业4/: Kmeans_Exp.ipynb  cluster_dataset.mat  untitled2.m
ros2作业/: readme.md
ros2作业/turtle_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2作业/turtle_ws/install/turtle_control/share/turtle_control/: package.bash  package.ps1  package.sh  package.zsh
ros2作业/turtle_ws/install/turtle_control/share/turtle_control/launch/: turtle_control.launch.py
ros2作业/turtle_ws/log/: latest_build
ros2作业/turtle_ws/src/turtle_control/: package.xml  setup.py
ros2作业/turtle_ws/src/turtle_control/config/: params.yaml
ros2作业/turtle_ws/src/turtle_control/scripts/: turtle_run
ros2作业/turtle_ws/src/turtle_control/turtle_control/: turtle_node.py
截图和Shell脚本/linux_practice/docs/: daily_report.txt
