<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fsd_bringup</name>
  <version>0.1.0</version>
  <description>F1 vehicle model and simulation launch files.</description>
  <maintainer email="1103477790@qq.com">student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>right_angle_stack</exec_depend>
  <exec_depend>right_angle_track</exec_depend>
  <exec_depend>fsd_common_msgs</exec_depend>
  <exec_depend>sim_perception</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
