<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>right_angle_track</name>
  <version>0.1.0</version>
  <description>Gazebo model and world resources for the right-angle cone track.</description>
  <maintainer email="user@example.com">SCUT Racing</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
